zeit.content.article changes
============================

3.6.4 (unreleased)
------------------

- Fix CSS bug that caused "new filename" input field to be wrongly positioned
  (VIV-530).


3.6.3 (2014-10-07)
------------------

- Restrict access to auto-cp features to separate permission (VIV-525).


3.6.2 (2014-09-18)
------------------

- Add an empty main image to articles imported via CDS, so syncing the teaser
  image in the UI later on works (VIV-491).

- Fix position of SEO workflow checkbox (VIV-484).

- Fix CSS so the publish status of the teaser image is visible (VIV-504).

- Use trashcan icon for delete instead of cross (VIV-493).


3.6.1 (2014-09-03)
------------------

- Use feature toggle ``zeit.content.article.social-push-mobile`` (VIV-466).

- Use feature toggle ``zeit.content.cp.automatic``.

- Set channels to ressort if no channels are set yet (VIV-469).


3.6.0 (2014-08-29)
------------------

- Add UI for Channel selection and lead candidate (VIV-469, VIV-463).

- Add "push to mobile" to social media section, send breaking news on a
  separate parse.com channel (VIV-466).


3.5.3 (2014-08-27)
------------------

- Reactivate posting breaking news to Facebook.


3.5.2 (2014-07-30)
------------------

- Make create_article test helper do the same things that creating through the
  browser would do.


3.5.1 (2014-07-17)
------------------

- Move JS filename normalization to zeit.cms.

- Move JS character counter to zeit.cms.

- Change social media checkboxes default to unchecked.

- Make social media settings writeable only while checked out (VIV-451).


3.5.0 (2014-07-10)
------------------

- Add DAV-Property ``is_breaking`` to mark articles that were created as
  breaking news, so the frontend can do different things to them (WEB-319).

- Create separate banner file ``/eilmeldung/wrapper-banner`` when "Homepage"
  is enabled (WEB-318).

- Split off EditorHelper test baseclass, for reuse from other packages.


3.4.7 (2014-07-02)