@@ -7,6 +7,8 @@ zeit.content.article changes
 - Fix CSS bug that caused "new filename" input field to be wrongly positioned
   (VIV-530).
 
+- Extract social media form to zeit.push (VIV-516).
+
 
 3.6.3 (2014-10-07)
 ------------------
